--- a/index.html
+++ b/index.html
@@ -1,11 +1,383 @@
 <!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<h1>
-Hello GitHub Page Woo Hoo!
-</h1>
-</body>
+<!--
+TERMS OF USE:
 
+
+Rights
+
+You are permitted to use this resource for both personal and commercial projects.
+You may modify the resources and include them into works, such as websites, applications 
+or other materials intended for sale. No attribution or link back to fuviz.com is required, 
+however any credit will be much appreciated.
+
+
+Prohibitions
+
+You do not have the rights to redistribute, resell, lease, license, sublicense or offer 
+this resource to any third party “as is” or as a separate attachment from any of your work 
+unless you modify it. If you wish to promote this resource on your site, you must link back 
+to the resource page at fuviz.com where users can find the download.
+
+
+For further information please contact us under:
+
+info@fuviz.com
+
+fuviz.com
+
+CREDITS:
+
+
+Fonts
+
+Lato (Free Google Font): http://www.google.com/fonts/specimen/Lato
+Source Sans Pro (Free Google Font): http://www.google.com/fonts/specimen/Source+Sans+Pro
+
+
+Icons (Font Icons)
+
+Fontello – Icon Fonts Generator: http://fontello.com/
+
+
+Images/Mockups
+
+Daniel Viero (Flickr)
+David Wall (Flickr)
+Death To Stock Photos
+Freebies Bug
+Graphic Burger
+Luis Hernandez (Flickr)
+Mark Sebastian (Flickr)
+Pic Jumbo
+Pixeden
+Unsplash
+
+
+For further information please contact us under:
+
+info@fuviz.com
+
+fuviz.com
+
+Convert to HTML5 Template By Meily Chhon
+-->
+
+<html>
+	<head>
+		<title>Reen Template for Designer</title>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
+		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="custom.css">
+		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
+		<script type="text/javascript" src="script.js"></script>
+	</head>
+	<body>
+		<div class="wrapper">
+			<header class="header">
+				<div class="top-header-bar">
+					<div class="container">
+						<div class="row">				
+							<div class="col-xs-12 col-sm-6 col-md-4 pull-left">
+								<div class="reen-small-contact">
+									<div class="email-contact"><a href="#"><span class="icon-mail"></span>info@reen.com</a></div>
+									<div class="phone-contact"><a href="tel:00 (123) 456 78 90"><span class="icon-mobile"></span>+00 (123) 456 78 90</a></div>
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-4 col-sm-offset-2 col-md-3 pull-right">
+								<div class="social-network">
+									<a href="#" title="Facebook"><span class="icon-facebook"></span></a>
+									<a href="#" title="Google Plus"><span class="icon-gplus"></span></a>
+									<a href="#" title="Twitter"><span class="icon-twitter"></span></a>
+									<a href="#" title="Pinterest"><span class="icon-pinterest"></span></a>
+									<a href="#" title="Behance"><span class="icon-behance"></span></a>
+									<a href="#" title="Dribble"><span class="icon-dribbble"></span></a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="navbar">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-2 col-sm-12">
+								<div class="logo">
+									<a href="#" title="Reen"><img src="img/logo.png" alt="Logo" width="161" height="41"/></a>
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-8">
+								<div class="nav-container">
+									<nav class="navbar navbar-default">
+										<div class="container-fluid">
+										  <!-- Brand and toggle get grouped for better mobile display -->
+										  <div class="navbar-header">
+												<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+													<span class="sr-only">Toggle navigation</span>
+													<span class="icon-bar"></span>
+													<span class="icon-bar"></span>
+													<span class="icon-bar"></span>
+												</button>
+											</div>
+
+										  <!-- Collect the nav links, forms, and other content for toggling -->
+											<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+											  <ul class="nav navbar-nav">
+												<li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+												<li><a href="#">portfolio</a></li>
+												<li><a href="#">blogs</a></li>
+												<li><a href="#">pages</a></li>
+												<li><a href="#">features</a></li>
+												<li><a href="#">mega menus</a></li>
+												<li><a href="#">contact</a></li>
+											  </ul>
+											</div><!-- /.navbar-collapse -->
+										</div><!-- /.container-fluid -->
+									</nav>
+								</div>
+							</div>
+							<div class="col-xs-12 col-sm-12 col-md-2">
+								<div class="search-box">
+									<form class="navbar-form" role="search">
+										<div class="form-group">
+										  <input type="text" class="form-control" placeholder="Search">
+										</div>
+										<button type="submit" class="btn btn-default btn-search"><span class="icon-search"></span></button>
+									</form>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</header>
+			
+			<section id="top-content-home">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 slider-home">
+					<div class="rows">
+						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+							  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+							  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+							  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+							</ol>
+
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active">
+									<div class="carousel-caption">								
+										<h1>MADE FOR DESIGNERS</h1>
+										<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>	
+										<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+									</div>
+								</div>
+							<div class="item">
+								<div class="carousel-caption">								
+									<h1>Fresh and beautiful design</h1>
+									<p>REEN is designed to showcase your talent and put your work in the forefront. Professionally use of typography and layout that fits your content.</p>	
+									<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+								</div>
+							</div>
+							<div class="item">								
+								<div class="carousel-caption">								
+									<h1>Hello, world!</h1>
+									<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>	
+									<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+								</div>
+							  </div>
+					
+							</div>
+						</div>
+						<!-- Controls -->
+						<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+						  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+						  <span class="sr-only">Previous</span>
+						</a>
+						<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+						  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+						  <span class="sr-only">Next</span>
+						</a>
+					</div>
+				</div>
+			</section>
+			<section id="middle-text" class="clearfix">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center">
+							<h2>Beautiful. Clean. Responsive.</h2>
+							<p>REEN is a high-quality solution for those who want a beautiful website in no time. It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, it doesn't matter. Your content will always looks its absolute best.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="passion-creativity-quality">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-4 passion">
+							<span class="icon-heart-empty"></span>
+							<h4>Passion</h4>
+							<p>
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-4 creativity">
+							<span class="icon-lightbulb"></span>
+							<h4>Creativity</h4>
+							<p>
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
+							</p>
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-4 quality">
+							<span class="icon-star-empty"></span>
+							<h4>Quality</h4>
+							<p>
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
+							</p>
+						</div>
+					</div>
+				</div>	
+			</section>
+			<section id="latest-works">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center latest-work-subtitle">
+							<h2>Check out our latest works</h2>
+							<h4>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</h4>
+						</div>
+					</div>
+					<div class="row project-big">
+						<div class="col-xs-12 col-sm-12 col-md-6">
+							<img src="img/portfolio1.jpg" alt="Portfolio1">
+							<div class="portfolio-title">
+								<h4>Grand Motel gets an identity brushup</h4>
+								<p>identity</p>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-12 col-md-6">
+							<img src="img/portfolio2.jpg" alt="Portfolio1">
+							<div class="portfolio-title">
+								<h4>Fresh branding for a creative startup</h4>
+								<p>identity</p>
+							</div>
+						</div>
+					</div>
+					<div class="row project-small">
+						<div id="carousel-example-generic-1" class="carousel slide carousel-bottom" data-ride="carousel">
+							<!-- Indicators -->
+							<ol class="carousel-indicators">
+							  <li data-target="#carousel-example-generic-1" data-slide-to="0" class="active"></li>
+							  <li data-target="#carousel-example-generic-1" data-slide-to="1"></li>
+							  <li data-target="#carousel-example-generic-1" data-slide-to="2"></li>
+							</ol>
+
+							<!-- Wrapper for slides -->
+							<div class="carousel-inner" role="listbox">
+								<div class="item active" role="presentation">
+									<ul>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item1.jpg" alt="Item1"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item2.jpg" alt="Item2"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="img/item3.jpg" alt="Item3"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item4.jpg" alt="Item4"></a></li>
+									</ul>
+								</div>
+								<div class="item" role="presentation">
+									<ul>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item1.jpg" alt="Item1"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item2.jpg" alt="Item2"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="img/item3.jpg" alt="Item3"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item4.jpg" alt="Item4"></a></li>
+									</ul>
+								</div>
+								<div class="item" role="presentation">								
+									<ul>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item1.jpg" alt="Item1"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item2.jpg" alt="Item2"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#"><img src="img/item3.jpg" alt="Item3"></a></li>
+										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item4.jpg" alt="Item4"></a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="cta-work-with-us" class="clearfix">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center">
+							<h2>Want to work with us?</h2>
+							<h4>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor. Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam.</h4>
+							<a class="btn btn-primary btn-lg" href="#" role="button">GET IN TOUCH</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<footer>
+				<div class="container footer-4-column">
+					<div class="row">
+						<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 who-we-are">
+							<h5>Who we are</h5>
+							<a href="#" class="logo-footer" title="reen logo"><img src="img/logo-footer.png" alt="REEN" width=""/></a>
+							<p>
+								Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. 
+								Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.
+							</p>
+							<a href="#" class="more">More About Us <span class="glyphicon glyphicon-arrow-right"></span></a>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 latest-work-footer">
+							<h5>Latest Works</h5>
+							<div class="portfolio-thumbnail">
+								<a href="#" title="Thumbnail 1"><img src="img/small-portfolio1.jpg" alt="portfolio1" width="85" height="85"/> </a>
+								<a href="#" title="Thumbnail 2"><img src="img/small-portfolio2.jpg" alt="portfolio2" width="125" height="85"/></a>
+								<a href="#" title="Thumbnail 3"><img src="img/small-portfolio3.jpg" alt="portfolio3" width="125" height="85"/></a>
+								<a href="#" title="Thumbnail 4"><img src="img/small-portfolio4.jpg" alt="portfolio4" width="125" height="85"/></a>
+							</div>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 get-in-touch">
+							<h5>Get in touch</h5>
+							<p>
+								Doloreiur quia commolu ptatemp dolupta oreprerum tibusam eumenis et consent accullignis dentibea autem inisita.
+							</p>
+							<p><span class="icon icon-location"></span>84 Street, City, State 24813</p>
+							<p><span class="icon icon-mobile"></span>+00 (123) 456 78 90</p>
+							<p><span class="icon icon-mail"></span>info@reen.com</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 free-update">
+							<h5>Free Updates</h5>
+							<p>Conecus iure posae volor remped modis aut lor volor accabora incim resto explabo.</p>
+							<form name="subscribe-box" action="?" method="post">
+								<input type="text" class="form-control" placeholder="Enter Your Email Address">
+								<button type="submit" class="btn btn-success btn-subscribe">SUBSCRIBE</button>
+							</form>
+						</div>
+					</div>
+				</div>
+				<div class="footer-bottom">
+					<div class="container">
+						<div class="col-xs-12 col-sm-6 col-md-3 footer-left">
+							<p>&COPY; 2015 REEN. All rights reserved.</p>
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-push-3 col-md-6 footer-right">
+							<nav class="nav">
+								<ul>
+									<li><a href="#" title="#">Home</a></li>
+									<li><a href="#" title="#">Portfolio</a></li>
+									<li><a href="#" title="#">Blog</a></li>
+									<li><a href="#" title="#">About</a></li>
+									<li><a href="#" title="#">Services</a></li>
+									<li><a href="#" title="#">Contact</a></li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<script type="text/javascript" src="js/bootstrap.js"></script>
+	</body>
 </html>
