--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@ TERMS OF USE:
 Rights
 
 You are permitted to use this resource for both personal and commercial projects.
-You may modify the resources and include them into works, such as websites, applications 
-or other materials intended for sale. No attribution or link back to fuviz.com is required, 
+You may modify the resources and include them into works, such as websites, applications
+or other materials intended for sale. No attribution or link back to fuviz.com is required,
 however any credit will be much appreciated.
 
 
 Prohibitions
 
-You do not have the rights to redistribute, resell, lease, license, sublicense or offer 
-this resource to any third party “as is” or as a separate attachment from any of your work 
-unless you modify it. If you wish to promote this resource on your site, you must link back 
+You do not have the rights to redistribute, resell, lease, license, sublicense or offer
+this resource to any third party “as is” or as a separate attachment from any of your work
+unless you modify it. If you wish to promote this resource on your site, you must link back
 to the resource page at fuviz.com where users can find the download.
 
 
@@ -72,15 +72,20 @@ Convert to HTML5 Template By Meily Chhon
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="custom.css">
+		<link rel="stylesheet" href="css/animate.css">
 		<script type="text/javascript" src="js/jquery-2.1.4.js"></script>
 		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="js/wow.js"></script>
+		<script>
+			new WOW().init();
+		</script>
 	</head>
 	<body>
 		<div class="wrapper">
 			<header class="header">
 				<div class="top-header-bar">
 					<div class="container">
-						<div class="row">				
+						<div class="row">
 							<div class="col-xs-12 col-sm-6 col-md-4 pull-left">
 								<div class="reen-small-contact">
 									<div class="email-contact"><a href="#"><span class="icon-mail"></span>info@reen.com</a></div>
@@ -103,14 +108,15 @@ Convert to HTML5 Template By Meily Chhon
 				<div class="navbar">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-2 col-sm-12">
+							<div class="col-xs-12 col-sm-12 col-md-2">
 								<div class="logo">
 									<a href="#" title="Reen"><img src="img/logo.png" alt="Logo" width="161" height="41"/></a>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-8">
+							<div class="col-xs-12 col-sm-12 col-md-10">
 								<div class="nav-container">
 									<nav class="navbar navbar-default">
+
 										<div class="container-fluid">
 										  <!-- Brand and toggle get grouped for better mobile display -->
 										  <div class="navbar-header">
@@ -119,6 +125,7 @@ Convert to HTML5 Template By Meily Chhon
 													<span class="icon-bar"></span>
 													<span class="icon-bar"></span>
 													<span class="icon-bar"></span>
+													<span class="icon-text text-primary"><strong>Main Menu</strong></span>
 												</button>
 											</div>
 
@@ -132,17 +139,18 @@ Convert to HTML5 Template By Meily Chhon
 												<li><a href="#">features</a></li>
 												<li><a href="#">mega menus</a></li>
 												<li><a href="#">contact</a></li>
+												<li><a href="#" class="search-icon">Search</a></li>
 											  </ul>
 											</div><!-- /.navbar-collapse -->
 										</div><!-- /.container-fluid -->
 									</nav>
 								</div>
 							</div>
-							<div class="col-xs-12 col-sm-12 col-md-2">
+							<div class="col-xs-12 col-sm-12 col-md-12">
 								<div class="search-box">
 									<form class="navbar-form" role="search">
 										<div class="form-group">
-										  <input type="text" class="form-control" placeholder="Search">
+											<input type="text" class="form-control" placeholder="Search">
 										</div>
 										<button type="submit" class="btn btn-default btn-search"><span class="icon-search"></span></button>
 									</form>
@@ -152,50 +160,53 @@ Convert to HTML5 Template By Meily Chhon
 					</div>
 				</div>
 			</header>
-			
+
 			<section id="top-content-home">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 slider-home">
 					<div class="rows">
-						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+						<div id="carousel-top" class="carousel slide" data-ride="carousel">
 							<!-- Indicators -->
 							<ol class="carousel-indicators">
-							  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-							  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-							  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+							  <li data-target="#carousel-top" data-slide-to="0" class="active"></li>
+							  <li data-target="#carousel-top" data-slide-to="1"></li>
+							  <li data-target="#carousel-top" data-slide-to="2"></li>
 							</ol>
 
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<div class="carousel-caption">								
+									<img src="img/banner1.jpg" width="1920" alt="sfsa"/>
+									<div class="carousel-caption">
 										<h1>MADE FOR DESIGNERS</h1>
-										<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>	
+										<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 										<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 									</div>
 								</div>
 							<div class="item">
-								<div class="carousel-caption">								
+								<img src="img/banner2.jpg" width="1920" alt="sfsa"/>
+								<div class="carousel-caption">
 									<h1>Fresh and beautiful design</h1>
-									<p>REEN is designed to showcase your talent and put your work in the forefront. Professionally use of typography and layout that fits your content.</p>	
+									<p>REEN is designed to showcase your talent and put your work in the forefront. Professionally use of typography and layout that fits your content.</p>
 									<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 								</div>
 							</div>
-							<div class="item">								
-								<div class="carousel-caption">								
+							<div class="item">
+								<img src="img/banner3.jpg" width="1920" alt="sfsa"/>
+								<div class="carousel-caption">
 									<h1>Hello, world!</h1>
-									<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>	
+									<p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
 									<p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
 								</div>
 							  </div>
-					
+
 							</div>
 						</div>
 						<!-- Controls -->
-						<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+						<a class="left carousel-control" href="#carousel-top" role="button" data-slide="prev">
 						  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 						  <span class="sr-only">Previous</span>
 						</a>
-						<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+						<a class="right carousel-control" href="#carousel-top" role="button" data-slide="next">
 						  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 						  <span class="sr-only">Next</span>
 						</a>
@@ -205,7 +216,7 @@ Convert to HTML5 Template By Meily Chhon
 			<section id="middle-text" class="clearfix">
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center">
+						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center wow fadeInUp">
 							<h2>Beautiful. Clean. Responsive.</h2>
 							<p>REEN is a high-quality solution for those who want a beautiful website in no time. It's fully responsive and will adapt itself to any mobile device. iPad, iPhone, Android, it doesn't matter. Your content will always looks its absolute best.</p>
 						</div>
@@ -215,50 +226,50 @@ Convert to HTML5 Template By Meily Chhon
 			<section id="passion-creativity-quality">
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-4 passion">
+						<div class="col-xs-12 col-sm-12 col-md-4 passion wow bounceInLeft">
 							<span class="icon-heart-empty"></span>
 							<h4>Passion</h4>
 							<p>
-							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor.
 							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
 							</p>
 						</div>
-						<div class="col-xs-12 col-sm-12 col-md-4 creativity">
+						<div class="col-xs-12 col-sm-12 col-md-4 creativity wow bounceIn">
 							<span class="icon-lightbulb"></span>
 							<h4>Creativity</h4>
 							<p>
-							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor.
 							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
 							</p>
 						</div>
-						<div class="col-xs-12 col-sm-12 col-md-4 quality">
+						<div class="col-xs-12 col-sm-12 col-md-4 quality wow bounceInRight">
 							<span class="icon-star-empty"></span>
 							<h4>Quality</h4>
 							<p>
-							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor. 
+							Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor.
 							Laceaque quiae sitiorem rest non restibusaes maio es dem tumquam core posae volor remped modis volor.
 							</p>
 						</div>
 					</div>
-				</div>	
+				</div>
 			</section>
 			<section id="latest-works">
 				<div class="container">
 					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center latest-work-subtitle">
+						<div class="col-xs-12 col-sm-12 col-md-push-2 col-md-8 col-lg-push-2 col-lg-8 text-center latest-work-subtitle wow fadeInUpBig">
 							<h2>Check out our latest works</h2>
 							<h4>Magnis modipsae que voloratati andigen daepeditem quiate re porem aut labor.</h4>
 						</div>
 					</div>
 					<div class="row project-big">
-						<div class="col-xs-12 col-sm-12 col-md-6">
+						<div class="col-xs-12 col-sm-12 col-md-6 wow fadeInLeft">
 							<img src="img/portfolio1.jpg" alt="Portfolio1">
 							<div class="portfolio-title">
 								<h4>Grand Motel gets an identity brushup</h4>
 								<p>identity</p>
 							</div>
 						</div>
-						<div class="col-xs-12 col-sm-12 col-md-6">
+						<div class="col-xs-12 col-sm-12 col-md-6 wow fadeInRight">
 							<img src="img/portfolio2.jpg" alt="Portfolio1">
 							<div class="portfolio-title">
 								<h4>Fresh branding for a creative startup</h4>
@@ -266,7 +277,7 @@ Convert to HTML5 Template By Meily Chhon
 							</div>
 						</div>
 					</div>
-					<div class="row project-small">
+					<div class="row project-small wow fadeIn">
 						<div id="carousel-example-generic-1" class="carousel slide carousel-bottom" data-ride="carousel">
 							<!-- Indicators -->
 							<ol class="carousel-indicators">
@@ -293,7 +304,7 @@ Convert to HTML5 Template By Meily Chhon
 										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item4.jpg" alt="Item4"></a></li>
 									</ul>
 								</div>
-								<div class="item" role="presentation">								
+								<div class="item" role="presentation">
 									<ul>
 										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item1.jpg" alt="Item1"></a></li>
 										<li class="col-xs-12 col-sm-6 col-md-3"><a href="#" title=""><img src="img/item2.jpg" alt="Item2"></a></li>
@@ -324,7 +335,7 @@ Convert to HTML5 Template By Meily Chhon
 							<h5>Who we are</h5>
 							<a href="#" class="logo-footer" title="reen logo"><img src="img/logo-footer.png" alt="REEN" width=""/></a>
 							<p>
-								Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor. 
+								Magnis modipsae voloratati andigen daepeditem quiate re porem que aut labor.
 								Laceaque eictemperum quiae sitiorem rest non restibusaes maio es dem tumquam.
 							</p>
 							<a href="#" class="more">More About Us <span class="glyphicon glyphicon-arrow-right"></span></a>
@@ -359,12 +370,27 @@ Convert to HTML5 Template By Meily Chhon
 				</div>
 				<div class="footer-bottom">
 					<div class="container">
-						<div class="col-xs-12 col-sm-6 col-md-3 footer-left">
+						<div class="col-sm-6 col-md-3 footer-left visible-sm visible-md visible-lg">
 							<p>&COPY; 2015 REEN. All rights reserved.</p>
 						</div>
-						<div class="col-xs-12 col-sm-6 col-md-push-3 col-md-6 footer-right">
+						<div class="col-sm-6 col-md-push-3 col-md-6 footer-right visible-sm visible-md visible-lg">
 							<nav class="nav">
 								<ul>
+									<li><a href="#" title="#">Home</a></li>
+									<li><a href="#" title="#">Portfolio</a></li>
+									<li><a href="#" title="#">Blog</a></li>
+									<li><a href="#" title="#">About</a></li>
+									<li><a href="#" title="#">Services</a></li>
+									<li><a href="#" title="#">Contact</a></li>
+								</ul>
+							</nav>
+						</div>
+						<div class="col-xs-12 visible-xs footer-center">
+							<p class="text-center">&COPY; 2015 REEN. All rights reserved.</p>
+						</div>
+						<div class="col-xs-12 visible-xs footer-center">
+							<nav class="nav">
+								<ul class="text-center">
 									<li><a href="#" title="#">Home</a></li>
 									<li><a href="#" title="#">Portfolio</a></li>
 									<li><a href="#" title="#">Blog</a></li>
@@ -379,5 +405,6 @@ Convert to HTML5 Template By Meily Chhon
 			</footer>
 		</div>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
+		<script type="text/javascript" src="js/mobile-swipe.js"></script>
 	</body>
 </html>
